--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET" /> <!--인터넷 권한 허용-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> <!--인터넷 권한 허용-->
+
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 인터넷 권한 허용 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -10,14 +11,16 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.RunRun"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_config" > <!--만듦-->
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+
+        <!-- 만듦 -->
         <activity
             android:name=".NetworkActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -26,7 +29,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
