--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,18 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+// For local.properties
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
     namespace 'com.example.runrun'
     compileSdk 33
 
     defaultConfig {
+        //service key 지정
+        buildConfigField "String", "SERVICE_KEY", properties['serviceKey']
+
         applicationId "com.example.runrun"
         minSdk 24
         targetSdk 33
@@ -37,12 +44,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.4.0'
-    //implementation 'androidx.core:core-ktx:+'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     //implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4") //코루틴 쓰려고 추가함
-    //implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4" )
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0-RC")//둘 중 뭐를 써야할까
 
 }
