--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:remove="android:appComponentFactory">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" /> <!-- 인터넷 권한 허용 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,8 +14,11 @@
         android:networkSecurityConfig="@xml/network_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.RunRun"
-        android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        android:usesCleartextTraffic="false"
+        tools:targetApi="31"
+        tools:remove="android:appComponentFactory">
+        <!--Didn't find class "androidx.core.app.CoreComponentFactory" 에러 때문에 추가함-->
+        <!--위에 android:usesCleartextTraffic="false" 모든 url허용을 true에서 false로 바꿈.-->
 
         <!-- 만듦 -->
         <activity
