--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.10'
+    }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+
+    // firebase 쓰려고 추가함
+    id 'com.google.gms.google-services' version '4.3.15' apply false
 }
