--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
 
     //firebase 쓰려고 추가함
     id 'com.google.gms.google-services'
+    //google maps 쓰려고 추가함
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 // For local.properties
@@ -64,5 +66,6 @@ dependencies {
 
     // to use Google Map
     implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
 }
