Google Maps Mark[0,0] - SUCCESS!

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 android.enableJetifier=true
+
+# I can't get reference from BuildConfig. So I added it but still not working
+android.defaults.buildfeatures.buildconfig=true
