--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'com.google.gms.google-services'
     //google maps 쓰려고 추가함
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+
 }
 
 // For local.properties
@@ -16,10 +17,15 @@ android {
     namespace 'com.example.runrun'
     compileSdk 33
 
+    // can't get reference from BuildConfig so I added
+    buildFeatures {
+        buildConfig = true
+    }
+
     defaultConfig {
         //service key 지정
         buildConfigField "String", "SERVICE_KEY", properties['serviceKey']
-        buildConfigField "String", "GOOGLE_MAPS_API_KEY", properties['google_map_api']
+        buildConfigField "String", "GOOGLE_MAP_API", properties['google_map_api']
 
         applicationId "com.example.runrun"
         minSdk 24
@@ -65,7 +71,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.7.0'
 
     // to use Google Map
-    implementation 'com.google.android.gms:play-services:12.0.1'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
 }
