--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,14 @@
         <!--Google Map 사용하려고 아래 다섯 줄 추가함-->
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <meta-data android:name="com.google.android.maps.v2.API_KEY"
-            android:value="${GOOGLE_MAPS_API_KEY}" /> <!--이건 구글 지도 API키-->
+            android:value= "${google_map_api}" /> <!--이건 구글 지도 API키--> <!--잘 되는 거 맞아? 연결 된 거 맞아???-->
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <!-- 만듦 -->
+        <activity
+            android:name=".RawMapViewDemoActivity"
+            android:exported="true" />
         <activity
             android:name=".NetworkActivity"
             android:exported="true" />
