--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
         <!--Google Map 사용하려고 아래 다섯 줄 추가함-->
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
-        <meta-data android:name="com.google.android.maps.v2.API_KEY"
+        <meta-data android:name="com.google.android.geo.API_KEY"
             android:value= "${google_map_api}" /> <!--이건 구글 지도 API키--> <!--잘 되는 거 맞아? 연결 된 거 맞아???-->
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
