--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation C'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
+    implementation 'com.google.android.gms:play-services-fitness:21.1.0'
+    implementation 'com.google.android.libraries.places:places:3.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
@@ -72,5 +75,8 @@ dependencies {
 
     // to use Google Map
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
+    // registerForActivityResult 때문에 추가
+    implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
 
 }
