--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_config"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RunRun"
+        android:theme="@style/AppTheme"
         android:usesCleartextTraffic="false"
         tools:targetApi="31"
         tools:remove="android:appComponentFactory">
@@ -29,7 +29,10 @@
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <!-- 만듦 -->
+        <activity
+            android:name="com.google.android.libraries.places.widget.AutocompleteActivity"
+            tools:replace="android:theme"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".RawMapViewDemoActivity"
             android:exported="true" />
@@ -38,6 +41,8 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
+            android:theme="@style/AppTheme"
+            android:configChanges="orientation|screenSize"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
