--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,7 @@ dependencies {
     // registerForActivityResult 때문에 추가
     implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
 
+    // JSON으로 serialize and deserialize
+    implementation 'com.google.code.gson:gson:2.8.9'
+
 }
