--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,12 @@ android {
     namespace 'com.example.runrun'
     compileSdk 33
 
-    // can't get reference from BuildConfig so I added
     buildFeatures {
         buildConfig = true
+    }
+    
+    viewBinding {
+        enabled = true
     }
 
     defaultConfig {
@@ -54,15 +57,15 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.android.gms:play-services-fitness:21.1.0'
     implementation 'com.google.android.libraries.places:places:3.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    //implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4") //코루틴 쓰려고 추가함
+     //코루틴 쓰려고 추가함
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0-RC")//둘 중 뭐를 써야할까
 
     // Import the Firebase BoM
@@ -77,9 +80,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
     // registerForActivityResult 때문에 추가
-    implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
+//    implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
 
     // JSON으로 serialize and deserialize
     implementation 'com.google.code.gson:gson:2.8.9'
-
 }
