--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,11 +27,10 @@
         tools:remove="android:appComponentFactory"
         tools:targetApi="31">
 
-        <receiver android:name=".NotificationReceiver" />
 
-        <activity
-            android:name=".ClientInputActivity"
-            android:exported="false" />
+        <receiver android:name=".AlarmReceiver"/>
+        <receiver android:name=".StopAlarmReceiver"/>
+
         <!-- Didn't find class "androidx.core.app.CoreComponentFactory" 에러 때문에 추가함 -->
         <!-- 위에 android:usesCleartextTraffic="false" 모든 url허용을 true에서 false로 바꿈. -->
         <!-- Google Map 사용하려고 아래 다섯 줄 추가함 -->
@@ -42,6 +45,10 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".SetAlarmActivity"
+            android:exported="true"/>
 
         <activity
             android:name="com.google.android.libraries.places.widget.AutocompleteActivity"
