--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,15 +6,12 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
 
     <application
         android:allowBackup="true"
@@ -28,21 +25,20 @@
         android:usesCleartextTraffic="false"
         tools:remove="android:appComponentFactory"
         tools:targetApi="31">
-
+        <activity
+            android:name=".AfterSetting"
+            android:exported="false" />
 
         <receiver
             android:name=".AlarmReceiver"
             android:enabled="true"
-            android:exported="false">
-        </receiver>
-        <receiver android:name=".StopAlarmReceiver"/>
+            android:exported="false"></receiver>
+        <receiver android:name=".StopAlarmReceiver" />
+
         <service
             android:name=".MyForegroundService"
             android:enabled="true"
-            android:exported="true">
-        </service>
-
-        <!-- Didn't find class "androidx.core.app.CoreComponentFactory" 에러 때문에 추가함 -->
+            android:exported="true"></service> <!-- Didn't find class "androidx.core.app.CoreComponentFactory" 에러 때문에 추가함 -->
         <!-- 위에 android:usesCleartextTraffic="false" 모든 url허용을 true에서 false로 바꿈. -->
         <!-- Google Map 사용하려고 아래 다섯 줄 추가함 -->
         <uses-library
@@ -59,7 +55,7 @@
 
         <activity
             android:name=".SetAlarmActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name="com.google.android.libraries.places.widget.AutocompleteActivity"
             android:theme="@style/AppTheme"
