--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,19 +26,22 @@
         tools:remove="android:appComponentFactory"
         tools:targetApi="31">
         <activity
+            android:name=".MainScreen"
+            android:exported="false" />
+        <activity
             android:name=".AfterSetting"
             android:exported="false" />
 
         <receiver
             android:name=".AlarmReceiver"
             android:enabled="true"
-            android:exported="false"></receiver>
+            android:exported="false" />
         <receiver android:name=".StopAlarmReceiver" />
 
         <service
             android:name=".MyForegroundService"
             android:enabled="true"
-            android:exported="true"></service> <!-- Didn't find class "androidx.core.app.CoreComponentFactory" 에러 때문에 추가함 -->
+            android:exported="true" /> <!-- Didn't find class "androidx.core.app.CoreComponentFactory" 에러 때문에 추가함 -->
         <!-- 위에 android:usesCleartextTraffic="false" 모든 url허용을 true에서 false로 바꿈. -->
         <!-- Google Map 사용하려고 아래 다섯 줄 추가함 -->
         <uses-library
@@ -64,7 +67,7 @@
             android:name=".MapViewActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".TwoInputs"
             android:configChanges="orientation|screenSize"
             android:exported="true"
             android:theme="@style/AppTheme">
