--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ properties.load(project.rootProject.file('local.properties').newDataInputStream(
 
 android {
     namespace 'com.example.runrun'
-    compileSdk 33
+    compileSdk 34
 
     buildFeatures {
         buildConfig = true
@@ -32,7 +32,7 @@ android {
 
         applicationId "com.example.runrun"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -74,7 +74,7 @@ dependencies {
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics-ktx'
     //firestore 등록
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.7.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.10.2'
 
     // to use Google Map
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
@@ -84,4 +84,18 @@ dependencies {
 
     // JSON으로 serialize and deserialize
     implementation 'com.google.code.gson:gson:2.8.9'
+    // 에러 나서 아래 두 줄 추가함
+//    implementation 'org.chromium.net:cronet-android:VERSION'
+//    implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == "androidx.appcompat") {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion "1.+"
+            }
+        }
+    }
 }
