save for final project

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ android.enableJetifier=true
 
 # I can't get reference from BuildConfig. So I added it but still not working
 android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
