--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,8 @@ plugins {
     id 'com.google.gms.google-services'
     //google maps 쓰려고 추가함
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
-
+    // kapt 쓰려고 추가함
+    id("kotlin-kapt")
 }
 
 // For local.properties
@@ -52,6 +53,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding{
+        enable = true
+    }
 }
 
 dependencies {
@@ -62,6 +66,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.android.gms:play-services-fitness:21.1.0'
     implementation 'com.google.android.libraries.places:places:3.2.0'
+    implementation 'androidx.activity:activity:1.8.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
@@ -78,6 +83,21 @@ dependencies {
 
     // to use Google Map
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
+    // viewpager2
+    implementation("androidx.viewpager2:viewpager2:1.0.0")
+
+    // fragment
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+
+    // tikxml
+    implementation("com.tickaroo.tikxml:annotation:0.8.13")
+    implementation("com.tickaroo.tikxml:core:0.8.13")
+    implementation("com.tickaroo.tikxml:retrofit-converter:0.8.13")
+    implementation("androidx.legacy:legacy-support-v4:1.0.0")
+    kapt("com.tickaroo.tikxml:processor:0.8.13")
+
+    implementation("com.github.bumptech.glide:glide:4.12.0")
 
 }
 
