--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,15 @@ dependencies {
 
     implementation("com.github.bumptech.glide:glide:4.12.0")
 
+    // preference 하려고
+    implementation("androidx.preference:preference:1.2.1")
+
+    // auth 로그인 구현 중
+    implementation("com.google.firebase:firebase-auth-ktx")
+    implementation("androidx.multidex:multidex:2.0.1")
+    // google 로그인
+    implementation("com.google.android.gms:play-services-auth:21.1.1")
+
 }
 
 configurations.all {
