RecyclerView가 안 쌓이는 문제 제외 괜찮음. Splash기능은 포기

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
         //service key 지정
         buildConfigField "String", "SERVICE_KEY", properties['serviceKey']
         buildConfigField "String", "GOOGLE_MAP_API", properties['google_map_api']
+        buildConfigField "String", "DECODING_SERVICE_KEY", properties['decoding_serviceKey']
 
         applicationId "com.example.runrun"
         minSdk 24
