--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         android:usesCleartextTraffic="false"
         tools:remove="android:appComponentFactory"
         tools:targetApi="31">
-
+        <activity
+            android:name=".SplashActivity"
+            android:exported="false" />
         <activity
             android:name=".AuthActivity"
             android:exported="false" />
