--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,7 +97,7 @@ dependencies {
     implementation("com.tickaroo.tikxml:retrofit-converter:0.8.13")
     implementation("androidx.legacy:legacy-support-v4:1.0.0")
     kapt("com.tickaroo.tikxml:processor:0.8.13")
-
+    // glide
     implementation("com.github.bumptech.glide:glide:4.12.0")
 
     // preference 하려고
@@ -108,6 +108,9 @@ dependencies {
     implementation("androidx.multidex:multidex:2.0.1")
     // google 로그인
     implementation("com.google.android.gms:play-services-auth:21.1.1")
+    // storage 추가
+    implementation("com.google.firebase:firebase-storage-ktx")
+
 
 }
 
