--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- special service -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".MyApplication"
@@ -26,16 +27,16 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="false"
         tools:remove="android:appComponentFactory"
-        tools:targetApi="31">
-        <activity
-            android:name=".SplashActivity"
-            android:exported="false" />
+        tools:targetApi="31"
+        android:requestLegacyExternalStorage="true"
+        >
         <activity
             android:name=".AuthActivity"
             android:exported="false" />
         <activity
             android:name=".SettingActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ConfirmActivity"
             android:exported="false" />
