youtube video가 뜨고 실행되지만 두번째 키워드를 넣었을 때 text만 바뀌고 비디오는 바뀌지 않는 문제가 있음

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,8 @@ dependencies {
     implementation ("com.squareup.retrofit2:converter-gson:2.9.0")
     // interceptor 추가
     implementation ("com.squareup.okhttp3:logging-interceptor:4.9.0")
+    // youtube 비디오를 실행하려면..
+    implementation ('com.pierfrancescosoffritti.androidyoutubeplayer:core:11.0.1')
 
 }
 
